fixed some scrolling/resizing bugs with nav, fiddled with nav spacing, fiddled with loading hex border

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -325,30 +325,52 @@ h3 {
       right: -60px;
 
       &.inner {
-        width: 108px;
-        //transform-origin: 52px 30px;
+        // width: 108px;
+        // //transform-origin: 52px 30px;
         transform: rotateX(-180deg);
-        //transform: scale(0.9);
-        left: -60px;
+        // //transform: scale(0.9);
+        // left: -60px;
         right: auto;
-        margin: 5.2px 6px;
+        // margin: 5.2px 6px;
+
+        // div:first-child {
+        //   border-right-color: $black;
+        //   border-right-width: 27px;
+        //   border-top-width: 47px;
+        //   border-bottom-width: 47px;
+        // }
+        // div:nth-child(2) {
+        //   background-color: $black;
+        //   width: 54px;
+        //   height: 93.6px;
+        // }
+        // div:last-child{
+        //   border-left-color: $black;
+        //   border-left-width: 27px;
+        //   border-top-width: 47px;
+        //   border-bottom-width: 47px;
+        // }
+        
+        //width: 103.85px;
+        left: -63px;
+        margin: 2px;
 
         div:first-child {
           border-right-color: $black;
-          border-right-width: 27px;
-          border-top-width: 47px;
-          border-bottom-width: 47px;
+          border-right-width: 28.85px;
+          border-top-width: 50px;
+          border-bottom-width: 50px;
         }
         div:nth-child(2) {
           background-color: $black;
-          width: 54px;
-          height: 93.6px;
+          width: 57.7px;
+          height: 100px;
         }
         div:last-child{
           border-left-color: $black;
-          border-left-width: 27px;
-          border-top-width: 47px;
-          border-bottom-width: 47px;
+          border-left-width: 28.85px;
+          border-top-width: 50px;
+          border-bottom-width: 50px;
         }
       }
 
